--- a/src/app/views/auth-pages/default/lock-screen/lock-screen.component.html
+++ b/src/app/views/auth-pages/default/lock-screen/lock-screen.component.html
@@ -1,5 +1,5 @@
 <div class="sign-in-from">
-  <img src="/assets/images/user/1.jpg" alt="user-image" class="rounded-circle">
+  <img src="assets/images/user/1.jpg" alt="user-image" class="rounded-circle">
   <h4 class="mt-3 mb-0">Hi ! Michael Smith</h4>
   <p>Enter your password to access the admin.</p>
   <form class="mt-4">
