--- a/src/app/views/dashboards/dashboard1/dashboard1.component.html
+++ b/src/app/views/dashboards/dashboard1/dashboard1.component.html
@@ -289,22 +289,22 @@
             <p>Bonbon macaroon jelly beans <a href="javascript:void(0);">gummi bears</a>gummi bears jelly lollipop apple</p>
             <div class="iq-media-group">
               <a href="javascript:void(0);" class="iq-media">
-                <img class="img-fluid avatar-40 rounded-circle" src="/assets/images/user/05.jpg" alt="">
+                <img class="img-fluid avatar-40 rounded-circle" src="assets/images/user/05.jpg" alt="">
               </a>
               <a href="javascript:void(0);" class="iq-media">
-                <img class="img-fluid avatar-40 rounded-circle" src="/assets/images/user/06.jpg" alt="">
+                <img class="img-fluid avatar-40 rounded-circle" src="assets/images/user/06.jpg" alt="">
               </a>
               <a href="javascript:void(0);" class="iq-media">
-                <img class="img-fluid avatar-40 rounded-circle" src="/assets/images/user/07.jpg" alt="">
+                <img class="img-fluid avatar-40 rounded-circle" src="assets/images/user/07.jpg" alt="">
               </a>
               <a href="javascript:void(0);" class="iq-media">
-                <img class="img-fluid avatar-40 rounded-circle" src="/assets/images/user/08.jpg" alt="">
+                <img class="img-fluid avatar-40 rounded-circle" src="assets/images/user/08.jpg" alt="">
               </a>
               <a href="javascript:void(0);" class="iq-media">
-                <img class="img-fluid avatar-40 rounded-circle" src="/assets/images/user/09.jpg" alt="">
+                <img class="img-fluid avatar-40 rounded-circle" src="assets/images/user/09.jpg" alt="">
               </a>
               <a href="javascript:void(0);" class="iq-media">
-                <img class="img-fluid avatar-40 rounded-circle" src="/assets/images/user/10.jpg" alt="">
+                <img class="img-fluid avatar-40 rounded-circle" src="assets/images/user/10.jpg" alt="">
               </a>
             </div>
           </div>
