--- a/src/app/views/pages/error-page/error-page.component.html
+++ b/src/app/views/pages/error-page/error-page.component.html
@@ -8,7 +8,7 @@
           <h4 class="mb-0">Oops! This Page is Not Found.</h4>
           <p>The requested page dose not exist.</p>
           <a class="btn btn-primary mt-3" href="javascript:void(0);"><i class="ri-home-4-line"></i>Back to Home</a>
-          <img src="./assets/images/error/01.png" class="img-fluid iq-error-img" alt="">
+          <img src=".assets/images/error/01.png" class="img-fluid iq-error-img" alt="">
         </div>
       </div>
     </div>
