Added "./" to assets/

--- a/src/app/components/sofbox/nav-bars/nav-bar1/nav-bar1.component.html
+++ b/src/app/components/sofbox/nav-bars/nav-bar1/nav-bar1.component.html
@@ -4,7 +4,7 @@
     <div class="iq-sidebar-logo">
       <div class="top-logo">
         <a href="index.html" class="logo">
-          <img src="assets/images/logo.png" class="img-fluid" alt="">
+          <img src="./assets/images/logo.png" class="img-fluid" alt="">
           <span>Sofbox</span>
         </a>
       </div>
@@ -90,7 +90,7 @@
       </div>
       <ul class="navbar-list">
         <li>
-          <a href="javascript:void(0);" class="search-toggle iq-waves-effect bg-primary text-white"><img src="assets/images/user/1.jpg" class="img-fluid rounded" alt="user"></a>
+          <a href="javascript:void(0);" class="search-toggle iq-waves-effect bg-primary text-white"><img src="./assets/images/user/1.jpg" class="img-fluid rounded" alt="user"></a>
           <div class="iq-sub-dropdown iq-user-dropdown">
             <div class="iq-card shadow-none m-0">
               <div class="iq-card-body p-0 ">
