--- a/src/app/components/sofbox/side-bars/side-bar1/side-bar1.component.html
+++ b/src/app/components/sofbox/side-bars/side-bar1/side-bar1.component.html
@@ -2,7 +2,7 @@
 <div class="iq-sidebar">
   <div class="iq-sidebar-logo d-flex justify-content-between">
     <a routerLink="/">
-      <img src="assets/images/logo.png" class="img-fluid" alt="">
+      <img src="./assets/images/logo.png" class="img-fluid" alt="">
       <span>Sofbox</span>
     </a>
     <div class="iq-menu-bt align-self-center">
