--- a/src/app/layouts/auth-layout/index/index.component.html
+++ b/src/app/layouts/auth-layout/index/index.component.html
@@ -7,8 +7,8 @@
           <router-outlet></router-outlet>
       </div>
       <div class="col-sm-6 text-center">
-        <div class="sign-in-detail text-white" style="background: url(assets/images/login/2.jpg) no-repeat 0 0; background-size: cover;">
-          <a class="sign-in-logo mb-5" href="javascript:void(0);"><img src="assets/images/logo-white.png" class="img-fluid" alt="logo"></a>
+        <div class="sign-in-detail text-white" style="background: url(./assets/images/login/2.jpg) no-repeat 0 0; background-size: cover;">
+          <a class="sign-in-logo mb-5" href="javascript:void(0);"><img src="./assets/images/logo-white.png" class="img-fluid" alt="logo"></a>
           <owl-carousel-o [options]="authSlideOptions">
             <ng-template carouselSlide *ngFor="let slide of authSlides">
               <div class="item">
