--- a/src/app/views/application/ecommerce/checkout/checkout.component.html
+++ b/src/app/views/application/ecommerce/checkout/checkout.component.html
@@ -285,7 +285,7 @@
                   <div class="iq-card-body">
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="d-flex justify-content-between align-items-center">
-                        <img src="assets/images/booking/cart.png" alt="cart" height="40" width="50">
+                        <img src="./assets/images/booking/cart.png" alt="cart" height="40" width="50">
                         <span>US Unlocked Debit Card 12XX XXXX XXXX 0000</span>
                       </div>
                       <span>Nik John</span>
