--- a/src/app/views/dashboards/patient/patient.component.html
+++ b/src/app/views/dashboards/patient/patient.component.html
@@ -2,7 +2,7 @@
   <div class="col-lg-3 col-md-12">
     <app-iq-card cardClass="iq-card iq-profile-card text-center" [isCardHeader]=false>
       <div class="iq-team text-center p-0">
-        <img src="assets/images/user/1.jpg"
+        <img src="./assets/images/user/1.jpg"
              class="img-fluid mb-3 avatar-120 rounded-circle" alt="">
         <h4 class="mb-0">Nik Jordan</h4>
         <a href="javascript:void(0);" class="d-inline-block w-100">nik@sofboxadmin.com</a>
@@ -92,7 +92,7 @@
                   class="ri-arrow-up-fill mr-1"></i>+30%</span>
                 <span class="font-size-14">Blood pressure</span>
                 <h2>75
-                  <img class="float-right summary-image-top mt-1" src="assets/images/page-img/04.png" alt="summary-image" /> </h2>
+                  <img class="float-right summary-image-top mt-1" src="./assets/images/page-img/04.png" alt="summary-image" /> </h2>
                 <div class="iq-progress-bar-linear d-inline-block w-100 mt-3">
                   <div class="iq-progress-bar">
                     <progressbar class="iq-progress-bar" [value]="90" type="primary" ></progressbar>
@@ -106,7 +106,7 @@
                   class="ri-arrow-up-fill mr-1"></i>+30%</span>
                 <span class="font-size-14">Temperature</span>
                 <h2>28.6
-                  <img class="float-right summary-image-top mt-1" src="assets/images/page-img/06.png" alt="summary-image" /> </h2>
+                  <img class="float-right summary-image-top mt-1" src="./assets/images/page-img/06.png" alt="summary-image" /> </h2>
                 <div class="iq-progress-bar-linear d-inline-block w-100 mt-3">
                   <div class="iq-progress-bar">
                     <progressbar class="iq-progress-bar" [value]="90" type="success" ></progressbar>
@@ -120,7 +120,7 @@
                   class="ri-arrow-down-fill mr-1"></i>+30%</span>
                 <span class="font-size-14">Heart Rate</span>
                 <h2>60
-                  <img class="float-right summary-image-top mt-1" src="assets/images/page-img/05.png" alt="summary-image" /> </h2>
+                  <img class="float-right summary-image-top mt-1" src="./assets/images/page-img/05.png" alt="summary-image" /> </h2>
                 <div class="iq-progress-bar-linear d-inline-block w-100 mt-3">
                   <div class="iq-progress-bar">
                     <progressbar class="iq-progress-bar" [value]="90" type="danger" ></progressbar>
