--- a/src/app/views/dashboards/tracking/tracking.component.html
+++ b/src/app/views/dashboards/tracking/tracking.component.html
@@ -3,7 +3,7 @@
     <app-iq-card [isCardHeader]=false>
       <div class="row align-items-center">
         <div class="col-lg-6 text-center">
-          <img src="assets/images/page-img/scoter.png" alt="scoter.png" class="img-fluid dash-tracking-icon">
+          <img src="./assets/images/page-img/scoter.png" alt="scoter.png" class="img-fluid dash-tracking-icon">
         </div>
         <div class="col-lg-6">
           <h3 class="mb-0">Scooter<small class="d-block font-size-16 text-secondary">Total 652</small></h3>
@@ -15,7 +15,7 @@
     <app-iq-card [isCardHeader]=false>
       <div class="row align-items-center">
         <div class="col-lg-6 text-center">
-          <img src="assets/images/page-img/car.png" alt="car.png" class="img-fluid dash-tracking-icon">
+          <img src="./assets/images/page-img/car.png" alt="car.png" class="img-fluid dash-tracking-icon">
         </div>
         <div class="col-lg-6">
           <h3 class="mb-0">Car<small class="d-block font-size-16 text-secondary">Total 129</small></h3>
@@ -27,7 +27,7 @@
     <app-iq-card [isCardHeader]=false>
       <div class="row align-items-center">
         <div class="col-lg-6 text-center">
-          <img src="assets/images/page-img/truck.png" alt="truck.png" class="img-fluid dash-tracking-icon transformX-min-1">
+          <img src="./assets/images/page-img/truck.png" alt="truck.png" class="img-fluid dash-tracking-icon transformX-min-1">
         </div>
         <div class="col-lg-6">
           <h3 class="mb-0">Truck<small class="d-block font-size-16 text-secondary">Total 2459</small></h3>
@@ -65,7 +65,7 @@
           <div class="iq-card map-profile-card shadow-none">
             <div class="iq-card-body">
               <div class="media mb-3">
-                <img class="avatar-40 rounded-circle" src="assets/images/user/1.jpg" alt="">
+                <img class="avatar-40 rounded-circle" src="./assets/images/user/1.jpg" alt="">
                 <div class="media-body ml-3">
                   <h5 class="mb-0"><b>D-NO-1</b></h5>
                   <p class="badge badge-primary font-weight-normal mb-0">ON TIME</p>
@@ -73,21 +73,21 @@
               </div>
 
               <div class="media mb-3">
-                <img class="avatar-30 align-self-start" src="assets/images/page-img/tag_blue.svg" alt="">
+                <img class="avatar-30 align-self-start" src="./assets/images/page-img/tag_blue.svg" alt="">
                 <div class="media-body ml-3">
                   <h6 class="mb-0">Flipkart</h6>
                   <p class="mb-0"><small>10 Items</small></p>
                 </div>
               </div>
               <div class="media mb-3">
-                <img class="avatar-30 align-self-start" src="assets/images/page-img/tag_red.svg" alt="">
+                <img class="avatar-30 align-self-start" src="./assets/images/page-img/tag_red.svg" alt="">
                 <div class="media-body ml-3">
                   <h6 class="mb-0">Zomato</h6>
                   <p class="mb-0"><small>2 Items</small></p>
                 </div>
               </div>
               <div class="media mb-3">
-                <img class="avatar-30" src="assets/images/page-img/man.svg" alt="">
+                <img class="avatar-30" src="./assets/images/page-img/man.svg" alt="">
                 <div class="media-body ml-3 align-self-center">
                   <h6 class="mb-0 text-primary">Warehouse</h6>
                 </div>
@@ -106,28 +106,28 @@
               <div class="row">
                 <div class="col-5">
                   <div class="media mb-3">
-                    <img class="avatar-40 rounded-circle" src="assets/images/user/1.jpg" alt="">
+                    <img class="avatar-40 rounded-circle" src="./assets/images/user/1.jpg" alt="">
                     <div class="media-body ml-3">
                       <h5 class="mb-0"><b>D-NO-1</b></h5>
                       <p class="badge badge-primary font-weight-normal mb-0">ON TIME</p>
                     </div>
                   </div>
                   <div class="media mb-3">
-                    <img class="avatar-30 align-self-start" src="assets/images/page-img/tag_blue.svg" alt="">
+                    <img class="avatar-30 align-self-start" src="./assets/images/page-img/tag_blue.svg" alt="">
                     <div class="media-body ml-3">
                       <h6 class="mb-0">Flipkart</h6>
                       <p class="mb-0"><small>10 Items</small></p>
                     </div>
                   </div>
                   <div class="media mb-3">
-                    <img class="avatar-30 align-self-start" src="assets/images/page-img/tag_red.svg" alt="">
+                    <img class="avatar-30 align-self-start" src="./assets/images/page-img/tag_red.svg" alt="">
                     <div class="media-body ml-3">
                       <h6 class="mb-0">Zomato</h6>
                       <p class="mb-0"><small>2 Items</small></p>
                     </div>
                   </div>
                   <div class="media mb-3">
-                    <img class="avatar-30" src="assets/images/page-img/man.svg" alt="">
+                    <img class="avatar-30" src="./assets/images/page-img/man.svg" alt="">
                     <div class="media-body ml-3 align-self-center">
                       <h6 class="mb-0 text-primary">Warehouse</h6>
                     </div>
@@ -199,7 +199,7 @@
             <div class="iq-card-body">
               <div class="media mb-3">
                 <div class="">
-                  <img class="avatar-40 rounded-circle" src="assets/images/user/1.jpg" alt="">
+                  <img class="avatar-40 rounded-circle" src="./assets/images/user/1.jpg" alt="">
                 </div>
                 <div class="media-body ml-3">
                   <h5 class="mb-0"><b>D-NO-3</b></h5>
@@ -207,21 +207,21 @@
                 </div>
               </div>
               <div class="media mb-3">
-                <img class="avatar-30 align-self-start" src="assets/images/page-img/tag_blue.svg" alt="">
+                <img class="avatar-30 align-self-start" src="./assets/images/page-img/tag_blue.svg" alt="">
                 <div class="media-body ml-3">
                   <h6 class="mb-0">Flipkart</h6>
                   <p class="mb-0"><small>10 Items</small></p>
                 </div>
               </div>
               <div class="media mb-3">
-                <img class="avatar-30 align-self-start" src="assets/images/page-img/tag_red.svg" alt="">
+                <img class="avatar-30 align-self-start" src="./assets/images/page-img/tag_red.svg" alt="">
                 <div class="media-body ml-3">
                   <h6 class="mb-0">Zomato</h6>
                   <p class="mb-0"><small>2 Items</small></p>
                 </div>
               </div>
               <div class="media mb-3">
-                <img class="avatar-30" src="assets/images/page-img/man.svg" alt="">
+                <img class="avatar-30" src="./assets/images/page-img/man.svg" alt="">
                 <div class="media-body ml-3 align-self-center">
                   <h6 class="mb-0 text-primary">Warehouse</h6>
                 </div>
@@ -238,7 +238,7 @@
             <div class="iq-card-body">
               <div class="media mb-3">
                 <div class="">
-                  <img class="avatar-40 rounded-circle" src="assets/images/user/1.jpg" alt="">
+                  <img class="avatar-40 rounded-circle" src="./assets/images/user/1.jpg" alt="">
                 </div>
                 <div class="media-body ml-3">
                   <h5 class="mb-0"><b>D-NO-4</b></h5>
@@ -246,21 +246,21 @@
                 </div>
               </div>
               <div class="media mb-3">
-                <img class="avatar-30 align-self-start" src="assets/images/page-img/tag_blue.svg" alt="">
+                <img class="avatar-30 align-self-start" src="./assets/images/page-img/tag_blue.svg" alt="">
                 <div class="media-body ml-3">
                   <h6 class="mb-0">Flipkart</h6>
                   <p class="mb-0"><small>10 Items</small></p>
                 </div>
               </div>
               <div class="media mb-3">
-                <img class="avatar-30 align-self-start" src="assets/images/page-img/tag_red.svg" alt="">
+                <img class="avatar-30 align-self-start" src="./assets/images/page-img/tag_red.svg" alt="">
                 <div class="media-body ml-3">
                   <h6 class="mb-0">Zomato</h6>
                   <p class="mb-0"><small>2 Items</small></p>
                 </div>
               </div>
               <div class="media mb-3">
-                <img class="avatar-30" src="assets/images/page-img/man.svg" alt="">
+                <img class="avatar-30" src="./assets/images/page-img/man.svg" alt="">
                 <div class="media-body ml-3 align-self-center">
                   <h6 class="mb-0 text-primary">Warehouse</h6>
                 </div>
@@ -277,7 +277,7 @@
             <div class="iq-card-body">
               <div class="media mb-3">
                 <div class="">
-                  <img class="avatar-40 rounded-circle" src="assets/images/user/1.jpg" alt="">
+                  <img class="avatar-40 rounded-circle" src="./assets/images/user/1.jpg" alt="">
                 </div>
                 <div class="media-body ml-3">
                   <h5 class="mb-0"><b>D-NO-5</b></h5>
@@ -285,21 +285,21 @@
                 </div>
               </div>
               <div class="media mb-3">
-                <img class="avatar-30 align-self-start" src="assets/images/page-img/tag_blue.svg" alt="">
+                <img class="avatar-30 align-self-start" src="./assets/images/page-img/tag_blue.svg" alt="">
                 <div class="media-body ml-3">
                   <h6 class="mb-0">Flipkart</h6>
                   <p class="mb-0"><small>10 Items</small></p>
                 </div>
               </div>
               <div class="media mb-3">
-                <img class="avatar-30 align-self-start" src="assets/images/page-img/tag_red.svg" alt="">
+                <img class="avatar-30 align-self-start" src="./assets/images/page-img/tag_red.svg" alt="">
                 <div class="media-body ml-3">
                   <h6 class="mb-0">Zomato</h6>
                   <p class="mb-0"><small>2 Items</small></p>
                 </div>
               </div>
               <div class="media mb-3">
-                <img class="avatar-30" src="assets/images/page-img/man.svg" alt="">
+                <img class="avatar-30" src="./assets/images/page-img/man.svg" alt="">
                 <div class="media-body ml-3 align-self-center">
                   <h6 class="mb-0 text-primary">Warehouse</h6>
                 </div>
@@ -316,7 +316,7 @@
             <div class="iq-card-body">
               <div class="media mb-3">
                 <div class="">
-                  <img class="avatar-40 rounded-circle" src="assets/images/user/1.jpg" alt="">
+                  <img class="avatar-40 rounded-circle" src="./assets/images/user/1.jpg" alt="">
                 </div>
                 <div class="media-body ml-3">
                   <h5 class="mb-0"><b>D-NO-6</b></h5>
@@ -324,21 +324,21 @@
                 </div>
               </div>
               <div class="media mb-3">
-                <img class="avatar-30 align-self-start" src="assets/images/page-img/tag_blue.svg" alt="">
+                <img class="avatar-30 align-self-start" src="./assets/images/page-img/tag_blue.svg" alt="">
                 <div class="media-body ml-3">
                   <h6 class="mb-0">Flipkart</h6>
                   <p class="mb-0"><small>10 Items</small></p>
                 </div>
               </div>
               <div class="media mb-3">
-                <img class="avatar-30 align-self-start" src="assets/images/page-img/tag_red.svg" alt="">
+                <img class="avatar-30 align-self-start" src="./assets/images/page-img/tag_red.svg" alt="">
                 <div class="media-body ml-3">
                   <h6 class="mb-0">Zomato</h6>
                   <p class="mb-0"><small>2 Items</small></p>
                 </div>
               </div>
               <div class="media mb-3">
-                <img class="avatar-30" src="assets/images/page-img/man.svg" alt="">
+                <img class="avatar-30" src="./assets/images/page-img/man.svg" alt="">
                 <div class="media-body ml-3 align-self-center">
                   <h6 class="mb-0 text-primary">Warehouse</h6>
                 </div>
@@ -355,7 +355,7 @@
             <div class="iq-card-body">
               <div class="media mb-3">
                 <div class="">
-                  <img class="avatar-40 rounded-circle" src="assets/images/user/1.jpg" alt="">
+                  <img class="avatar-40 rounded-circle" src="./assets/images/user/1.jpg" alt="">
                 </div>
                 <div class="media-body ml-3">
                   <h5 class="mb-0"><b>D-NO-7</b></h5>
@@ -363,21 +363,21 @@
                 </div>
               </div>
               <div class="media mb-3">
-                <img class="avatar-30 align-self-start" src="assets/images/page-img/tag_blue.svg" alt="">
+                <img class="avatar-30 align-self-start" src="./assets/images/page-img/tag_blue.svg" alt="">
                 <div class="media-body ml-3">
                   <h6 class="mb-0">Flipkart</h6>
                   <p class="mb-0"><small>10 Items</small></p>
                 </div>
               </div>
               <div class="media mb-3">
-                <img class="avatar-30 align-self-start" src="assets/images/page-img/tag_red.svg" alt="">
+                <img class="avatar-30 align-self-start" src="./assets/images/page-img/tag_red.svg" alt="">
                 <div class="media-body ml-3">
                   <h6 class="mb-0">Zomato</h6>
                   <p class="mb-0"><small>2 Items</small></p>
                 </div>
               </div>
               <div class="media mb-3">
-                <img class="avatar-30" src="assets/images/page-img/man.svg" alt="">
+                <img class="avatar-30" src="./assets/images/page-img/man.svg" alt="">
                 <div class="media-body ml-3 align-self-center">
                   <h6 class="mb-0 text-primary">Warehouse</h6>
                 </div>
@@ -394,7 +394,7 @@
             <div class="iq-card-body">
               <div class="media mb-3">
                 <div class="">
-                  <img class="avatar-40 rounded-circle" src="assets/images/user/1.jpg" alt="">
+                  <img class="avatar-40 rounded-circle" src="./assets/images/user/1.jpg" alt="">
                 </div>
                 <div class="media-body ml-3">
                   <h5 class="mb-0"><b>D-NO-8</b></h5>
@@ -402,21 +402,21 @@
                 </div>
               </div>
               <div class="media mb-3">
-                <img class="avatar-30 align-self-start" src="assets/images/page-img/tag_blue.svg" alt="">
+                <img class="avatar-30 align-self-start" src="./assets/images/page-img/tag_blue.svg" alt="">
                 <div class="media-body ml-3">
                   <h6 class="mb-0">Flipkart</h6>
                   <p class="mb-0"><small>10 Items</small></p>
                 </div>
               </div>
               <div class="media mb-3">
-                <img class="avatar-30 align-self-start" src="assets/images/page-img/tag_red.svg" alt="">
+                <img class="avatar-30 align-self-start" src="./assets/images/page-img/tag_red.svg" alt="">
                 <div class="media-body ml-3">
                   <h6 class="mb-0">Zomato</h6>
                   <p class="mb-0"><small>2 Items</small></p>
                 </div>
               </div>
               <div class="media mb-3">
-                <img class="avatar-30" src="assets/images/page-img/man.svg" alt="">
+                <img class="avatar-30" src="./assets/images/page-img/man.svg" alt="">
                 <div class="media-body ml-3 align-self-center">
                   <h6 class="mb-0 text-primary">Warehouse</h6>
                 </div>
@@ -778,22 +778,22 @@
             <p>Bonbon macaroon jelly beans <a href="javascript:void(0);">gummi bears</a>gummi bears jelly lollipop apple</p>
             <div class="iq-media-group">
               <a href="javascript:void(0);" class="iq-media">
-                <img class="img-fluid avatar-40 rounded-circle" src="assets/images/user/05.jpg" alt="">
+                <img class="img-fluid avatar-40 rounded-circle" src="./assets/images/user/05.jpg" alt="">
               </a>
               <a href="javascript:void(0);" class="iq-media">
-                <img class="img-fluid avatar-40 rounded-circle" src="assets/images/user/06.jpg" alt="">
+                <img class="img-fluid avatar-40 rounded-circle" src="./assets/images/user/06.jpg" alt="">
               </a>
               <a href="javascript:void(0);" class="iq-media">
-                <img class="img-fluid avatar-40 rounded-circle" src="assets/images/user/07.jpg" alt="">
+                <img class="img-fluid avatar-40 rounded-circle" src="./assets/images/user/07.jpg" alt="">
               </a>
               <a href="javascript:void(0);" class="iq-media">
-                <img class="img-fluid avatar-40 rounded-circle" src="assets/images/user/08.jpg" alt="">
+                <img class="img-fluid avatar-40 rounded-circle" src="./assets/images/user/08.jpg" alt="">
               </a>
               <a href="javascript:void(0);" class="iq-media">
-                <img class="img-fluid avatar-40 rounded-circle" src="assets/images/user/09.jpg" alt="">
+                <img class="img-fluid avatar-40 rounded-circle" src="./assets/images/user/09.jpg" alt="">
               </a>
               <a href="javascript:void(0);" class="iq-media">
-                <img class="img-fluid avatar-40 rounded-circle" src="assets/images/user/10.jpg" alt="">
+                <img class="img-fluid avatar-40 rounded-circle" src="./assets/images/user/10.jpg" alt="">
               </a>
             </div>
           </div>
