--- a/src/app/views/pages/pages-maintainance/pages-maintainance.component.html
+++ b/src/app/views/pages/pages-maintainance/pages-maintainance.component.html
@@ -3,7 +3,7 @@
     <div class="row no-gutters">
       <div class="col-sm-12 text-center">
         <div class="maintenance">
-          <img src="assets/images/error/02.png" class="img-fluid" alt="">
+          <img src="./assets/images/error/02.png" class="img-fluid" alt="">
           <h3 class="mt-4 mb-1">We are Currently Performing Maintenance</h3>
           <p>Please check back in sometime.</p>
         </div>
