--- a/src/app/views/auth-pages/default/confirm-mail/confirm-mail.component.html
+++ b/src/app/views/auth-pages/default/confirm-mail/confirm-mail.component.html
@@ -1,5 +1,5 @@
 <div class="sign-in-from">
-  <img src="assets/images/login/mail.png" width="80"  alt="">
+  <img src="./assets/images/login/mail.png" width="80"  alt="">
   <h1 class="mt-3 mb-0">Success !</h1>
   <p>A email has been send to youremail@domain.com. Please check for an email from company and click on the included link to reset your password.</p>
   <div class="d-inline-block w-100">
