--- a/src/app/views/core/ui-cards/ui-cards.component.html
+++ b/src/app/views/core/ui-cards/ui-cards.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-sm-3">
         <app-iq-card [isCardHeader]=false>
-            <img card-top src="assets/images/page-img/07.jpg" class="card-img-top" alt="#">
+            <img card-top src="./assets/images/page-img/07.jpg" class="card-img-top" alt="#">
             <h4 class="card-title">Card title</h4>
             <p class="card-text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
             <a href="javascript:void(0);" class="btn btn-primary">Button</a>
@@ -9,7 +9,7 @@
     </div>
     <div class="col-sm-3">
         <app-iq-card [isCardHeader]=false>
-            <img card-top src="assets/images/page-img/07.jpg" class="card-img-top" alt="#">
+            <img card-top src="./assets/images/page-img/07.jpg" class="card-img-top" alt="#">
             <h4 class="card-title">Card title</h4>
             <p class="card-text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
             <p>It is a long established fact that a the readable content of a page when looking at its layout.</p>
@@ -19,7 +19,7 @@
     </div>
     <div class="col-sm-3">
         <app-iq-card [isCardHeader]=false>
-            <img card-top src="assets/images/page-img/07.jpg" class="card-img-top" alt="#">
+            <img card-top src="./assets/images/page-img/07.jpg" class="card-img-top" alt="#">
             <h4 class="card-title">Card title</h4>
             <p class="card-text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
             <ul class="list-group list-group-flush">
@@ -30,7 +30,7 @@
     </div>
     <div class="col-sm-3">
       <div class="card iq-mb-3">
-        <img src="assets/images/page-img/07.jpg" class="card-img-top" alt="#">
+        <img src="./assets/images/page-img/07.jpg" class="card-img-top" alt="#">
         <div class="card-body">
            <h4 class="card-title">Card title</h4>
            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -121,7 +121,7 @@
 <div class="row">
     <div class="col-sm-4">
         <app-iq-card [isCardHeader]=false>
-            <img card-top src="assets/images/page-img/07.jpg" class="card-img-top" alt="#">
+            <img card-top src="./assets/images/page-img/07.jpg" class="card-img-top" alt="#">
             <h4 class="card-title">Card title</h4>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -132,12 +132,12 @@
             <h4 class="card-title">Card title</h4>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            <img card-bottom src="assets/images/page-img/07.jpg" class="card-img-top" alt="#">
+            <img card-bottom src="./assets/images/page-img/07.jpg" class="card-img-top" alt="#">
         </app-iq-card>
     </div>
     <div class="col-sm-4">
         <app-iq-card cardClass="card bg-dark text-white iq-mb-3" [isCardHeader]=false [isCardBody]=false>
-            <img card-top src="assets/images/page-img/07.jpg" class="card-img" alt="#">
+            <img card-top src="./assets/images/page-img/07.jpg" class="card-img" alt="#">
             <div card-bottom class="card-img-overlay">
                 <h4 class="card-title text-white">Card title</h4>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -154,7 +154,7 @@
     </div>
     <div class="col-lg-6">
       <app-card-with-image>
-        <img card-image src="assets/images/page-img/08.jpg" class="card-img" alt="#">
+        <img card-image src="./assets/images/page-img/08.jpg" class="card-img" alt="#">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in. a little bit longer.</p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -162,7 +162,7 @@
     </div>
   <div class="col-lg-6">
     <app-card-with-image cardBodyClass="card-body text-right" cardRowClass="row no-gutters flex-row-reverse">
-      <img card-image src="assets/images/page-img/09.jpg" class="card-img" alt="#">
+      <img card-image src="./assets/images/page-img/09.jpg" class="card-img" alt="#">
       <h4 class="card-title">Card title</h4>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in. a little bit longer.</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -278,7 +278,7 @@
   <div class="col-sm-12">
     <div class="card-group iq-mb-3">
       <div class="card">
-        <img src="assets/images/page-img/07.jpg" class="card-img-top" alt="#">
+        <img src="./assets/images/page-img/07.jpg" class="card-img-top" alt="#">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -286,7 +286,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="assets/images/page-img/07.jpg" class="card-img-top" alt="#">
+        <img src="./assets/images/page-img/07.jpg" class="card-img-top" alt="#">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -294,7 +294,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="assets/images/page-img/07.jpg" class="card-img-top" alt="#">
+        <img src="./assets/images/page-img/07.jpg" class="card-img-top" alt="#">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -310,7 +310,7 @@
     </div>
     <div class="card-columns">
       <app-iq-card cardClass="card iq-mb-3" [isCardHeader]=false>
-        <img card-top src="assets/images/page-img/07.jpg" class="card-img-top" alt="#">
+        <img card-top src="./assets/images/page-img/07.jpg" class="card-img-top" alt="#">
         <h4 class="card-title">Card title that wraps to a new line</h4>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
       </app-iq-card>
@@ -325,7 +325,7 @@
        </blockquote>
       </app-iq-card>
       <app-iq-card cardClass="card iq-mb-3" [isCardHeader]=false>
-        <img card-top src="assets/images/page-img/07.jpg" class="card-img-top" alt="#">
+        <img card-top src="./assets/images/page-img/07.jpg" class="card-img-top" alt="#">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -346,7 +346,7 @@
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </app-iq-card>
       <app-iq-card cardClass="card iq-mb-3" [isCardHeader]=false [isCardBody]=false>
-        <img card-top src="assets/images/page-img/07.jpg" class="card-img-top" alt="#">
+        <img card-top src="./assets/images/page-img/07.jpg" class="card-img-top" alt="#">
       </app-iq-card>
       <app-iq-card cardClass="card text-right iq-mb-3" [isCardHeader]=false>
         <blockquote class="blockquote mb-0">
