--- a/src/app/views/core/ui-carousel/ui-carousel.component.html
+++ b/src/app/views/core/ui-carousel/ui-carousel.component.html
@@ -7,13 +7,13 @@
       <p>Here’s a carousel with slides only. Note the presence of the <code>.d-block</code> and <code>.img-fluid</code> on carousel images to prevent browser default image alignment.</p>
       <carousel [showIndicators]=false>
         <slide>
-          <img src="assets/images/small/img-1.jpg" class="d-block w-100"  alt="first slide" style="display: block;">
+          <img src="./assets/images/small/img-1.jpg" class="d-block w-100"  alt="first slide" style="display: block;">
         </slide>
         <slide>
-          <img src="assets/images/small/img-1.jpg" class="d-block w-100" alt="second slide">
+          <img src="./assets/images/small/img-1.jpg" class="d-block w-100" alt="second slide">
         </slide>
         <slide>
-          <img src="assets/images/small/img-1.jpg" class="d-block w-100" alt="third slide">
+          <img src="./assets/images/small/img-1.jpg" class="d-block w-100" alt="third slide">
         </slide>
       </carousel>
     </app-iq-card>
@@ -26,13 +26,13 @@
       <p>Here’s a carousel with slides only. Note the presence of the <code>.d-block</code> and <code>.img-fluid</code> on carousel images to prevent browser default image alignment.</p>
           <carousel [showIndicators]=false>
             <slide>
-              <img src="assets/images/small/img-1.jpg" class="d-block w-100"  alt="first slide" style="display: block;">
+              <img src="./assets/images/small/img-1.jpg" class="d-block w-100"  alt="first slide" style="display: block;">
             </slide>
             <slide>
-              <img src="assets/images/small/img-1.jpg" class="d-block w-100" alt="#">
+              <img src="./assets/images/small/img-1.jpg" class="d-block w-100" alt="#">
             </slide>
             <slide>
-              <img src="assets/images/small/img-1.jpg" class="d-block w-100" alt="#">
+              <img src="./assets/images/small/img-1.jpg" class="d-block w-100" alt="#">
             </slide>
           </carousel>
 
@@ -46,13 +46,13 @@
       <p>Here’s a carousel with slides only. Note the presence of the <code>.d-block</code> and <code>.img-fluid</code> on carousel images to prevent browser default image alignment.</p>
       <carousel>
         <slide>
-          <img src="assets/images/small/img-1.jpg" class="d-block w-100"  alt="first slide" style="display: block;">
+          <img src="./assets/images/small/img-1.jpg" class="d-block w-100"  alt="first slide" style="display: block;">
         </slide>
         <slide>
-          <img src="assets/images/small/img-1.jpg" class="d-block w-100" alt="#">
+          <img src="./assets/images/small/img-1.jpg" class="d-block w-100" alt="#">
         </slide>
         <slide>
-          <img src="assets/images/small/img-1.jpg" class="d-block w-100" alt="#">
+          <img src="./assets/images/small/img-1.jpg" class="d-block w-100" alt="#">
         </slide>
       </carousel>
     </app-iq-card>
@@ -65,21 +65,21 @@
      <p>Here’s a carousel with slides only. Note the presence of the <code>.d-block</code> and <code>.img-fluid</code> on carousel images to prevent browser default image alignment.</p>
      <carousel>
       <slide>
-        <img src="assets/images/small/img-1.jpg" alt="first slide" style="display: block; width: 100%;">
+        <img src="./assets/images/small/img-1.jpg" alt="first slide" style="display: block; width: 100%;">
         <div class="carousel-caption d-none d-md-block">
           <h3 class="text-light">First slide label</h3>
           <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
         </div>
       </slide>
       <slide>
-        <img src="assets/images/small/img-1.jpg" alt="second slide" style="display: block; width: 100%;">
+        <img src="./assets/images/small/img-1.jpg" alt="second slide" style="display: block; width: 100%;">
         <div class="carousel-caption d-none d-md-block">
           <h3 class="text-light">Second slide label</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
       </slide>
       <slide>
-        <img src="assets/images/small/img-1.jpg" alt="third slide" style="display: block; width: 100%;">
+        <img src="./assets/images/small/img-1.jpg" alt="third slide" style="display: block; width: 100%;">
         <div class="carousel-caption d-none d-md-block">
           <h3 class="text-light">Third slide label</h3>
           <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
@@ -97,13 +97,13 @@
       <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="assets/images/small/img-1.jpg" class="d-block w-100" alt="#">
+              <img src="./assets/images/small/img-1.jpg" class="d-block w-100" alt="#">
             </div>
             <div class="carousel-item">
-              <img src="assets/images/small/img-1.jpg" class="d-block w-100" alt="#">
+              <img src="./assets/images/small/img-1.jpg" class="d-block w-100" alt="#">
             </div>
             <div class="carousel-item">
-              <img src="assets/images/small/img-1.jpg" class="d-block w-100" alt="#">
+              <img src="./assets/images/small/img-1.jpg" class="d-block w-100" alt="#">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
