--- a/src/app/views/pages/invoice/invoice.component.html
+++ b/src/app/views/pages/invoice/invoice.component.html
@@ -3,7 +3,7 @@
     <app-iq-card [isCardHeader]=false>
       <div class="row">
         <div class="col-lg-6">
-          <img src="assets/images/logo.png" class="img-fluid" alt="">
+          <img src="./assets/images/logo.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-6 align-self-center">
           <h4 class="mb-0 float-right">Invoice</h4>
