--- a/src/app/views/pages/pages-comingsoon/pages-comingsoon.component.html
+++ b/src/app/views/pages/pages-comingsoon/pages-comingsoon.component.html
@@ -4,7 +4,7 @@
       <div class="col-sm-8 text-center">
         <div class="iq-comingsoon-info">
           <a href="javascript:void(0);">
-          <img src="assets/images/logo-full2.png" class="img-fluid w-25" alt="">
+          <img src="./assets/images/logo-full2.png" class="img-fluid w-25" alt="">
           </a>
           <h2 class="mt-4 mb-1">Stay tunned, we're launching very soon</h2>
           <p>We are working very hard to give you the best experience possible!</p>
